--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "72cc2b95",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "87309b27",
    "metadata": {},
    "outputs": [
@@ -37,23 +37,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Series([], dtype: float64)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_6660\\2225549679.py:3: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  s = pd.Series()\n"
+      "Series([], dtype: object)\n"
      ]
     }
    ],
    "source": [
     "#Create empty series \n",
     "\n",
-    "s = pd.Series(dtype=object)\n",
-    "print(s)"
+    "series = pd.Series(dtype=object)\n",
+    "print(series)"
    ]
   },
   {
@@ -80,8 +72,8 @@
     "#Create a Series from ndarray\n",
     "\n",
     "data=np.array(['a','b','c','d','e','f'])\n",
-    "val=pd.Series(data)\n",
-    "print(val)"
+    "value=pd.Series(data)\n",
+    "print(value)"
    ]
   },
   {
@@ -105,8 +97,8 @@
     "#Create a Series from dict\n",
     "\n",
     "data = {'a' : 0., 'b' : 1., 'c' : 2.}\n",
-    "s = pd.Series(data)\n",
-    "print(s)"
+    "series = pd.Series(data)\n",
+    "print(series)"
    ]
   },
   {
@@ -116,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = pd.Series([1,2,3,4,5],index = ['a','b','c','d','e'])\n"
+    "series = pd.Series([1,2,3,4,5],index = ['a','b','c','d','e'])\n"
    ]
   },
   {
@@ -135,7 +127,7 @@
    ],
    "source": [
     "#retrieve the first element\n",
-    "print(s[0])"
+    "print(series[0])"
    ]
   },
   {
@@ -158,7 +150,7 @@
    "source": [
     "#retrieve the first three element\n",
     "\n",
-    "print(s[:3])"
+    "print(series[:3])"
    ]
   },
   {
@@ -181,7 +173,7 @@
    "source": [
     "#Retrieve the last three elements.\n",
     "\n",
-    "print(s[-3:])"
+    "print(series[-3:])"
    ]
   },
   {
@@ -211,8 +203,8 @@
    "source": [
     "#Create an Empty DataFrame\n",
     "\n",
-    "df = pd.DataFrame()\n",
-    "print(df)"
+    "dataframe = pd.DataFrame()\n",
+    "print(dataframe)"
    ]
   },
   {
