what is numpy.ndarray ?

--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "b04c94f7",
    "metadata": {},
    "outputs": [
@@ -58,6 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'numpy.ndarray'>\n",
       "0    a\n",
       "1    b\n",
       "2    c\n",
@@ -69,9 +70,10 @@
     }
    ],
    "source": [
-    "#Create a Series from ndarray\n",
+    "#Create a Series from numpy.ndarray\n",
     "\n",
     "data=np.array(['a','b','c','d','e','f'])\n",
+    "print(type(data))\n",
     "value=pd.Series(data)\n",
     "print(value)"
    ]
