--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -49,6 +49,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "894524a4",
+   "metadata": {},
+   "source": [
+    "# what is numpy.ndarray ?\n",
+    ">numpy.ndarray is a class in NumPy that represents a multidimensional, homogeneous array of fixed-size items. It is used to create arrays with specific shapes, data types, and memory layouts. An ndarray object describes the format of each element in the array, including its byte-order, size in memory, and data type (integer, floating point, etc.). Arrays should be constructed using np.array() or other array creation functions. The class provides various attributes like shape, dtype, and methods for array manipulation and indexing. Additionally, ndarray objects can share data with other arrays and can be views to memory owned by Python or buffer objects."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "b04c94f7",
