#Create a Series from dictionary

--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "#Create a Series from dict\n",
+    "#Create a Series from dictionary\n",
     "\n",
     "data = {'a' : 0., 'b' : 1., 'c' : 2.}\n",
     "series = pd.Series(data)\n",
