--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "42cc9103",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "series = pd.Series([1,2,3,4,5],index = ['a','b','c','d','e'])\n"
+    "# another way \n",
+    "series = pd.Series([1,2,3,4,5],index = ['a','b','c','d','e'])"
    ]
   },
   {
