# another way to create series

--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# another way \n",
+    "# another way to create series\n",
     "series = pd.Series([1,2,3,4,5],index = ['a','b','c','d','e'])"
    ]
   },
