--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -114,13 +114,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "82713977",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "d    4\n",
+      "e    5\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# another way to create series\n",
-    "series = pd.Series([1,2,3,4,5],index = ['a','b','c','d','e'])"
+    "series = pd.Series([1,2,3,4,5],index = ['a','b','c','d','e'])\n",
+    "print(series)"
    ]
   },
   {
