--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "ae6707df",
    "metadata": {},
    "outputs": [
@@ -148,6 +148,14 @@
      "output_type": "stream",
      "text": [
       "1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\illegible\\AppData\\Local\\Temp\\ipykernel_2416\\3375815413.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  print(series[0])\n"
      ]
     }
    ],
