## what is pandas.DataFrame() ?

--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -211,6 +211,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b0900b9",
+   "metadata": {},
+   "source": [
+    "## what is pandas.DataFrame() ?\n",
+    "\n",
+    ">pandas.DataFrame() is a constructor in the Pandas library used to create a two-dimensional, size-mutable, potentially heterogeneous tabular data structure known as a DataFrame. This function allows the creation of DataFrames from various data types like arrays, dictionaries, or existing DataFrames. DataFrames are structured with labeled axes for rows and columns, making them suitable for handling tabular data. The constructor takes parameters such as data, index, columns, dtype, and copy, allowing customization of the DataFrame's content and structure. Data can be passed as structured or homogeneous arrays, dictionaries, iterables, or DataFrames. The resulting DataFrame can be manipulated, indexed, and selected for analysis and data processing tasks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "8e73292f",
