# create dataframe from pandas series and dictionary

--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -313,10 +313,11 @@
     }
    ],
    "source": [
-    "d = {'one' : pd.Series([1, 2, 3], index=['a', 'b', 'c']),\n",
+    "# create dataframe from pandas series and dictionary\n",
+    "data = {'one' : pd.Series([1, 2, 3], index=['a', 'b', 'c']),\n",
     "   'two' : pd.Series([1, 2, 3, 4], index=['a', 'b', 'c', 'd'])}\n",
     "\n",
-    "df = pd.DataFrame(d)\n",
+    "df = pd.DataFrame(data)\n",
     "print(df)"
    ]
   },
