--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -317,8 +317,8 @@
     "data = {'one' : pd.Series([1, 2, 3], index=['a', 'b', 'c']),\n",
     "   'two' : pd.Series([1, 2, 3, 4], index=['a', 'b', 'c', 'd'])}\n",
     "\n",
-    "df = pd.DataFrame(data)\n",
-    "print(df)"
+    "dataframe = pd.DataFrame(data)\n",
+    "print(dataframe)"
    ]
   },
   {
