--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -290,7 +290,7 @@
     "#Create a DataFrame from Dict\n",
     "\n",
     "data = {'Name':['Tom', 'Jack', 'Steve', 'Ricky'],'Age':[28,34,29,42]}\n",
-    "df = pd.DataFrame(data)\n",
+    "dataframe = pd.DataFrame(data)\n",
     "print(df)"
    ]
   },
