--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -264,8 +264,8 @@
     "#Create a DataFrame from Lists\n",
     "\n",
     "data = [['Alex',10],['Bob',12],['Clarke',13]]\n",
-    "df = pd.DataFrame(data,columns=['Name','Age'])\n",
-    "print(df)"
+    "dataframe = pd.DataFrame(data,columns=['Name','Age'])\n",
+    "print(dataframe)"
    ]
   },
   {
@@ -291,7 +291,7 @@
     "\n",
     "data = {'Name':['Tom', 'Jack', 'Steve', 'Ricky'],'Age':[28,34,29,42]}\n",
     "dataframe = pd.DataFrame(data)\n",
-    "print(df)"
+    "print(dataframe)"
    ]
   },
   {
