--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "69a327a6",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
     "#Column Addition\n",
     "\n",
     "print (\"Adding a new column by passing as Series:\")\n",
-    "df['three']=pd.Series([10,20,30],index=['a','b','c'])\n",
+    "dataframe['three']=pd.Series([10,20,30],index=['a','b','c'])\n",
     "print (\"Adding a new column using the existing columns in DataFrame:\")\n",
     "df['four']=df['one']+df['three']\n",
     "\n",
