--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -347,9 +347,9 @@
     "print (\"Adding a new column by passing as Series:\")\n",
     "dataframe['three']=pd.Series([10,20,30],index=['a','b','c'])\n",
     "print (\"Adding a new column using the existing columns in DataFrame:\")\n",
-    "df['four']=df['one']+df['three']\n",
+    "dataframe['four']=dataframe['one']+dataframe['three']\n",
     "\n",
-    "print(df)"
+    "print(dataframe)"
    ]
   },
   {
