--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -382,13 +382,13 @@
     "\n",
     "# using del function\n",
     "print (\"Deleting the first column using DEL function:\")\n",
-    "del df['one']\n",
-    "print(df)\n",
+    "del dataframe['one']\n",
+    "print(dataframe)\n",
     "\n",
     "# using pop function\n",
     "print (\"Deleting another column using POP function:\")\n",
-    "df.pop('two')\n",
-    "print(df)"
+    "dataframe.pop('two')\n",
+    "print(dataframe)"
    ]
   },
   {
