--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -393,6 +393,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "bd849ae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "DataFrame.pop() missing 1 required positional argument: 'item'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# try pop with out args will delete the last column\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdataframe\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: DataFrame.pop() missing 1 required positional argument: 'item'"
+     ]
+    }
+   ],
+   "source": [
+    "# try pop with out args will raise error\n",
+    "dataframe.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "id": "0f51eec5",
    "metadata": {},
