--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -434,8 +434,8 @@
    ],
    "source": [
     "#Create a series with 4 random numbers\n",
-    "s = pd.Series(np.random.randn(4))\n",
-    "print(s)"
+    "series = pd.Series(np.random.randn(4))\n",
+    "print(series)"
    ]
   },
   {
