--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -456,9 +456,9 @@
    "source": [
     "#Empty function\n",
     "\n",
-    "s = pd.Series(np.random.randn(4))\n",
+    "series = pd.Series(np.random.randn(4))\n",
     "print (\"Is the Object empty?\")\n",
-    "print(s.empty)"
+    "print(series.empty)"
    ]
   },
   {
