--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "4d9f940b",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
     "\n",
     "series = pd.Series(np.random.randn(4))\n",
     "print (\"Is the Object empty?\")\n",
-    "print(series.empty)"
+    "print(series.empty) # this will check the series if it is empty or not"
    ]
   },
   {
