--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "0549a415",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
     "#ndim function to check dimension \n",
     "\n",
     "print (\"The dimensions of the object:\")\n",
-    "print (s.ndim)"
+    "print (series.ndim)"
    ]
   },
   {
