--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "id": "c430580b",
    "metadata": {},
    "outputs": [
@@ -493,14 +493,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-1.18992808 -0.42309009  1.66723795 -0.88393504]\n"
+      "[ 2.01319696 -0.64180942  0.8689707  -0.28843509]\n"
      ]
     }
    ],
    "source": [
     "#Values function to check values\n",
     "\n",
-    "print(s.values)\n"
+    "print(series.values)\n"
    ]
   },
   {
