--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -505,28 +505,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "dd7d705b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0   -1.189928\n",
-       "1   -0.423090\n",
-       "2    1.667238\n",
-       "3   -0.883935\n",
+       "0    2.013197\n",
+       "1   -0.641809\n",
+       "2    0.868971\n",
+       "3   -0.288435\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Head function to check first 5 rows\n",
-    "s.head()"
+    "series.head()"
    ]
   },
   {
