--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -531,28 +531,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "da4e53c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0   -1.189928\n",
-       "1   -0.423090\n",
-       "2    1.667238\n",
-       "3   -0.883935\n",
+       "0    2.013197\n",
+       "1   -0.641809\n",
+       "2    0.868971\n",
+       "3   -0.288435\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Tail function to check last 5 rows\n",
-    "s.tail()"
+    "series.tail()"
    ]
   },
   {
