--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -572,13 +572,13 @@
    "source": [
     "#shape function to check no. of rows and columns\n",
     "\n",
-    "d = {'Name':pd.Series(['Tom','James','Ricky','Vin','Steve','Smith','Jack']),\n",
+    "data = {'Name':pd.Series(['Tom','James','Ricky','Vin','Steve','Smith','Jack']),\n",
     "   'Age':pd.Series([25,26,25,23,30,29,23]),\n",
     "   'Rating':pd.Series([4.23,3.24,3.98,2.56,3.20,4.6,3.8])}\n",
     " \n",
     "#Create a DataFrame\n",
-    "df = pd.DataFrame(d)\n",
-    "print (df.shape)"
+    "dataframe = pd.DataFrame(data)\n",
+    "print (dataframe.shape)"
    ]
   },
   {
