--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -572,7 +572,7 @@
    "source": [
     "#shape function to check no. of rows and columns\n",
     "\n",
-    "data = {'Name':pd.Series(['Tom','James','Ricky','Vin','Steve','Smith',]),\n",
+    "data = {'Name':pd.Series(['Tom','James','Ricky','Vin','Steve','Smith','Jack']),\n",
     "   'Age':pd.Series([25,26,25,23,30,29,23]),\n",
     "   'Rating':pd.Series([4.23,3.24,3.98,2.56,3.20,4.6,3.8])}\n",
     " \n",
