--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -685,7 +685,7 @@
    "source": [
     "#describe is used for showing various statistical measure of data\n",
     "\n",
-    "df.describe()"
+    "dataframe.describe()"
    ]
   },
   {
