--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -723,7 +723,8 @@
    "source": [
     "#Sorting in ascending order\n",
     "\n",
-    "unsorted_df = pd.DataFrame(np.random.randn(10,2),index=[1,4,6,2,3,5,9,8,0,7],columns = ['col2','col1'])\n",
+    "unsorted_df = pd.DataFrame(\n",
+    "    np.random.randn(10,2),index=[1,4,6,2,3,5,9,8,0,7],columns = ['col2','col1'])\n",
     "\n",
     "sorted_df = unsorted_df.sort_index(ascending=True)\n",
     "print (sorted_df)"
