--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -802,12 +802,13 @@
    "source": [
     "#Check total missing data \n",
     " \n",
-    "dataframe = pd.DataFrame(np.random.randn(5, 3), index=['a', 'c', 'e', 'f',\n",
-    "'h'],columns=['one', 'two', 'three'])\n",
+    "dataframe = pd.DataFrame(data=np.random.randn(5, 3), \n",
+    "                         index=['a', 'c', 'e', 'f','h'],\n",
+    "                         columns=['one', 'two', 'three'])\n",
     "\n",
-    "df = df.reindex(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h'])\n",
+    "dataframe = dataframe.reindex(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h'])\n",
     "\n",
-    "print(df.isnull().sum())"
+    "print(dataframe.isnull().sum())"
    ]
   },
   {
