print("dataframe before reindex")

--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -805,9 +805,10 @@
     "dataframe = pd.DataFrame(data=np.random.randn(5, 3), \n",
     "                         index=['a', 'c', 'e', 'f','h'],\n",
     "                         columns=['one', 'two', 'three'])\n",
-    "\n",
+    "print(\"dataframe before reindex\")\n",
+    "print(dataframe)\n",
     "dataframe = dataframe.reindex(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h'])\n",
-    "\n",
+    "print(dataframe)\n",
     "print(dataframe.isnull().sum())"
    ]
   },
