print("dataframe after reindex")

--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -809,6 +809,7 @@
     "print(dataframe)\n",
     "dataframe = dataframe.reindex(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h'])\n",
     "print(dataframe)\n",
+    "print(\"dataframe after reindex\")\n",
     "print(dataframe.isnull().sum())"
    ]
   },
