--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "id": "63a0b030",
    "metadata": {},
    "outputs": [
@@ -792,6 +792,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "dataframe before reindex\n",
+      "        one       two     three\n",
+      "a -0.367931 -0.784333 -0.142293\n",
+      "c -0.750910 -0.269190 -2.824361\n",
+      "e  0.348223 -0.736378 -1.953094\n",
+      "f  0.721396 -0.094991  0.903459\n",
+      "h -1.206933 -0.902765  1.117594\n",
+      "dataframe after reindex\n",
+      "        one       two     three\n",
+      "a -0.367931 -0.784333 -0.142293\n",
+      "b       NaN       NaN       NaN\n",
+      "c -0.750910 -0.269190 -2.824361\n",
+      "d       NaN       NaN       NaN\n",
+      "e  0.348223 -0.736378 -1.953094\n",
+      "f  0.721396 -0.094991  0.903459\n",
+      "g       NaN       NaN       NaN\n",
+      "h -1.206933 -0.902765  1.117594\n",
       "one      3\n",
       "two      3\n",
       "three    3\n",
@@ -805,10 +822,10 @@
     "dataframe = pd.DataFrame(data=np.random.randn(5, 3), \n",
     "                         index=['a', 'c', 'e', 'f','h'],\n",
     "                         columns=['one', 'two', 'three'])\n",
-    "print(\"dataframe before reindex\")\n",
+    "print(\"dataframe before reindex\\n\")\n",
     "print(dataframe)\n",
     "dataframe = dataframe.reindex(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h'])\n",
-    "print(\"dataframe after reindex\")\n",
+    "print(\"dataframe after reindex\\n\")\n",
     "print(dataframe)\n",
     "print(dataframe.isnull().sum())"
    ]
