--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "63a0b030",
    "metadata": {},
    "outputs": [
@@ -793,22 +793,24 @@
      "output_type": "stream",
      "text": [
       "dataframe before reindex\n",
+      "\n",
       "        one       two     three\n",
-      "a -0.367931 -0.784333 -0.142293\n",
-      "c -0.750910 -0.269190 -2.824361\n",
-      "e  0.348223 -0.736378 -1.953094\n",
-      "f  0.721396 -0.094991  0.903459\n",
-      "h -1.206933 -0.902765  1.117594\n",
+      "a  0.308373  2.279528  1.102128\n",
+      "c  1.642182  1.042406  0.749202\n",
+      "e -0.209419  0.815182 -0.825419\n",
+      "f -0.610412 -0.346531 -0.190438\n",
+      "h -2.382763  1.251922 -1.467250\n",
       "dataframe after reindex\n",
+      "\n",
       "        one       two     three\n",
-      "a -0.367931 -0.784333 -0.142293\n",
+      "a  0.308373  2.279528  1.102128\n",
       "b       NaN       NaN       NaN\n",
-      "c -0.750910 -0.269190 -2.824361\n",
+      "c  1.642182  1.042406  0.749202\n",
       "d       NaN       NaN       NaN\n",
-      "e  0.348223 -0.736378 -1.953094\n",
-      "f  0.721396 -0.094991  0.903459\n",
+      "e -0.209419  0.815182 -0.825419\n",
+      "f -0.610412 -0.346531 -0.190438\n",
       "g       NaN       NaN       NaN\n",
-      "h -1.206933 -0.902765  1.117594\n",
+      "h -2.382763  1.251922 -1.467250\n",
       "one      3\n",
       "two      3\n",
       "three    3\n",
@@ -822,10 +824,10 @@
     "dataframe = pd.DataFrame(data=np.random.randn(5, 3), \n",
     "                         index=['a', 'c', 'e', 'f','h'],\n",
     "                         columns=['one', 'two', 'three'])\n",
-    "print(\"dataframe before reindex\\n\")\n",
+    "print(\"\\ndataframe before reindex\\n\")\n",
     "print(dataframe)\n",
     "dataframe = dataframe.reindex(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h'])\n",
-    "print(\"dataframe after reindex\\n\")\n",
+    "print(\"\\ndataframe after reindex\\n\")\n",
     "print(dataframe)\n",
     "print(dataframe.isnull().sum())"
    ]
