--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "63a0b030",
    "metadata": {},
    "outputs": [
@@ -792,25 +792,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "dataframe before reindex\n",
       "\n",
       "        one       two     three\n",
-      "a  0.308373  2.279528  1.102128\n",
-      "c  1.642182  1.042406  0.749202\n",
-      "e -0.209419  0.815182 -0.825419\n",
-      "f -0.610412 -0.346531 -0.190438\n",
-      "h -2.382763  1.251922 -1.467250\n",
+      "a -1.244562  0.582482 -0.869486\n",
+      "c -0.276447 -0.210718  0.753157\n",
+      "e  1.030994  1.893731 -0.049121\n",
+      "f -0.541063 -0.598335  1.563208\n",
+      "h -2.236760  0.190480  0.617522\n",
+      "\n",
       "dataframe after reindex\n",
       "\n",
       "        one       two     three\n",
-      "a  0.308373  2.279528  1.102128\n",
+      "a -1.244562  0.582482 -0.869486\n",
       "b       NaN       NaN       NaN\n",
-      "c  1.642182  1.042406  0.749202\n",
+      "c -0.276447 -0.210718  0.753157\n",
       "d       NaN       NaN       NaN\n",
-      "e -0.209419  0.815182 -0.825419\n",
-      "f -0.610412 -0.346531 -0.190438\n",
+      "e  1.030994  1.893731 -0.049121\n",
+      "f -0.541063 -0.598335  1.563208\n",
       "g       NaN       NaN       NaN\n",
-      "h -2.382763  1.251922 -1.467250\n",
+      "h -2.236760  0.190480  0.617522\n",
       "one      3\n",
       "two      3\n",
       "three    3\n",
@@ -824,10 +826,10 @@
     "dataframe = pd.DataFrame(data=np.random.randn(5, 3), \n",
     "                         index=['a', 'c', 'e', 'f','h'],\n",
     "                         columns=['one', 'two', 'three'])\n",
-    "print(\"\\ndataframe before reindex\\n\")\n",
+    "print(\"\\ndataframe before reindex: \\n\")\n",
     "print(dataframe)\n",
     "dataframe = dataframe.reindex(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h'])\n",
-    "print(\"\\ndataframe after reindex\\n\")\n",
+    "print(\"\\ndataframe after reindex: \\n\")\n",
     "print(dataframe)\n",
     "print(dataframe.isnull().sum())"
    ]
