--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "63a0b030",
    "metadata": {},
    "outputs": [
@@ -793,26 +793,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "dataframe before reindex\n",
+      "dataframe before reindex: \n",
       "\n",
       "        one       two     three\n",
-      "a -1.244562  0.582482 -0.869486\n",
-      "c -0.276447 -0.210718  0.753157\n",
-      "e  1.030994  1.893731 -0.049121\n",
-      "f -0.541063 -0.598335  1.563208\n",
-      "h -2.236760  0.190480  0.617522\n",
+      "a  0.551457  0.336952  0.302064\n",
+      "c  0.674995 -0.619646  0.557384\n",
+      "e -0.693520 -0.533533  0.187225\n",
+      "f -3.681917 -0.652030 -0.197355\n",
+      "h -1.619685 -0.535196 -1.264130\n",
       "\n",
-      "dataframe after reindex\n",
+      "dataframe after reindex: \n",
       "\n",
       "        one       two     three\n",
-      "a -1.244562  0.582482 -0.869486\n",
+      "a  0.551457  0.336952  0.302064\n",
       "b       NaN       NaN       NaN\n",
-      "c -0.276447 -0.210718  0.753157\n",
+      "c  0.674995 -0.619646  0.557384\n",
       "d       NaN       NaN       NaN\n",
-      "e  1.030994  1.893731 -0.049121\n",
-      "f -0.541063 -0.598335  1.563208\n",
+      "e -0.693520 -0.533533  0.187225\n",
+      "f -3.681917 -0.652030 -0.197355\n",
       "g       NaN       NaN       NaN\n",
-      "h -2.236760  0.190480  0.617522\n",
+      "h -1.619685 -0.535196 -1.264130\n",
       "one      3\n",
       "two      3\n",
       "three    3\n",
