--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -831,6 +831,7 @@
     "dataframe = dataframe.reindex(['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h'])\n",
     "print(\"\\ndataframe after reindex: \\n\")\n",
     "print(dataframe)\n",
+    "print(\"\\ndataframe after reindex sum: \\n\")\n",
     "print(dataframe.isnull().sum())"
    ]
   },
