--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "63a0b030",
    "metadata": {},
    "outputs": [
@@ -796,23 +796,26 @@
       "dataframe before reindex: \n",
       "\n",
       "        one       two     three\n",
-      "a  0.551457  0.336952  0.302064\n",
-      "c  0.674995 -0.619646  0.557384\n",
-      "e -0.693520 -0.533533  0.187225\n",
-      "f -3.681917 -0.652030 -0.197355\n",
-      "h -1.619685 -0.535196 -1.264130\n",
+      "a -0.325602 -1.224648 -0.634916\n",
+      "c -0.154372 -0.990859 -0.658320\n",
+      "e -0.074425  0.719899  0.879008\n",
+      "f  0.512683  1.995813 -1.262337\n",
+      "h  0.360913  0.369843 -1.315752\n",
       "\n",
       "dataframe after reindex: \n",
       "\n",
       "        one       two     three\n",
-      "a  0.551457  0.336952  0.302064\n",
+      "a -0.325602 -1.224648 -0.634916\n",
       "b       NaN       NaN       NaN\n",
-      "c  0.674995 -0.619646  0.557384\n",
+      "c -0.154372 -0.990859 -0.658320\n",
       "d       NaN       NaN       NaN\n",
-      "e -0.693520 -0.533533  0.187225\n",
-      "f -3.681917 -0.652030 -0.197355\n",
+      "e -0.074425  0.719899  0.879008\n",
+      "f  0.512683  1.995813 -1.262337\n",
       "g       NaN       NaN       NaN\n",
-      "h -1.619685 -0.535196 -1.264130\n",
+      "h  0.360913  0.369843 -1.315752\n",
+      "\n",
+      "dataframe after reindex sum: \n",
+      "\n",
       "one      3\n",
       "two      3\n",
       "three    3\n",
@@ -832,7 +835,8 @@
     "print(\"\\ndataframe after reindex: \\n\")\n",
     "print(dataframe)\n",
     "print(\"\\ndataframe after reindex sum: \\n\")\n",
-    "print(dataframe.isnull().sum())"
+    "print(dataframe.isnull().sum())\n",
+    "#NOTE: \"isnull()\" function will remove all NAN values from our dataframe"
    ]
   },
   {
