--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "id": "e326907b",
    "metadata": {},
    "outputs": [
@@ -874,9 +874,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>1.375333</td>\n",
-       "      <td>-1.785767</td>\n",
-       "      <td>-1.703025</td>\n",
+       "      <td>-0.325602</td>\n",
+       "      <td>-1.224648</td>\n",
+       "      <td>-0.634916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
@@ -886,9 +886,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>0.712623</td>\n",
-       "      <td>0.685756</td>\n",
-       "      <td>1.089950</td>\n",
+       "      <td>-0.154372</td>\n",
+       "      <td>-0.990859</td>\n",
+       "      <td>-0.658320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
@@ -898,15 +898,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>e</th>\n",
-       "      <td>-1.311858</td>\n",
-       "      <td>0.272072</td>\n",
-       "      <td>0.649527</td>\n",
+       "      <td>-0.074425</td>\n",
+       "      <td>0.719899</td>\n",
+       "      <td>0.879008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f</th>\n",
-       "      <td>-0.294235</td>\n",
-       "      <td>-1.811272</td>\n",
-       "      <td>0.301675</td>\n",
+       "      <td>0.512683</td>\n",
+       "      <td>1.995813</td>\n",
+       "      <td>-1.262337</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>g</th>\n",
@@ -916,9 +916,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>h</th>\n",
-       "      <td>-2.232793</td>\n",
-       "      <td>-2.644037</td>\n",
-       "      <td>0.324259</td>\n",
+       "      <td>0.360913</td>\n",
+       "      <td>0.369843</td>\n",
+       "      <td>-1.315752</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -926,23 +926,23 @@
       ],
       "text/plain": [
        "        one       two     three\n",
-       "a  1.375333 -1.785767 -1.703025\n",
+       "a -0.325602 -1.224648 -0.634916\n",
        "b       NaN       NaN       NaN\n",
-       "c  0.712623  0.685756  1.089950\n",
+       "c -0.154372 -0.990859 -0.658320\n",
        "d       NaN       NaN       NaN\n",
-       "e -1.311858  0.272072  0.649527\n",
-       "f -0.294235 -1.811272  0.301675\n",
+       "e -0.074425  0.719899  0.879008\n",
+       "f  0.512683  1.995813 -1.262337\n",
        "g       NaN       NaN       NaN\n",
-       "h -2.232793 -2.644037  0.324259"
+       "h  0.360913  0.369843 -1.315752"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "dataframe"
    ]
   },
   {
