--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -836,7 +836,7 @@
     "print(dataframe)\n",
     "print(\"\\ndataframe after reindex sum: \\n\")\n",
     "print(dataframe.isnull().sum())\n",
-    "#NOTE: \"isnull()\" function will remove all NAN values from our dataframe"
+    "#NOTE: \"isnull()\" function will remove all NAN values from our dataframe *permanently*"
    ]
   },
   {
