--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -1134,7 +1134,7 @@
     }
    ],
    "source": [
-    "#Fill missing values with \n",
+    "#Fill missing values with 1\n",
     "dataframe.fillna(1)"
    ]
   },
