--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -1191,9 +1191,9 @@
     "   'Rank': [1, 2, 2, 3, 3,4 ,1 ,1,2 , 4,1,2],\n",
     "   'Year': [2014,2015,2014,2015,2014,2015,2016,2017,2016,2014,2015,2017],\n",
     "   'Points':[876,789,863,673,741,812,756,788,694,701,804,690]}\n",
-    "df = pd.DataFrame(ipl_data)\n",
+    "dataframe = pd.DataFrame(ipl_data)\n",
     "\n",
-    "print(df.groupby(['Team','Year']).groups)"
+    "print(dataframe.groupby(['Team','Year']).groups)"
    ]
   },
   {
