--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 53,
    "id": "cdc819eb",
    "metadata": {},
    "outputs": [
@@ -1428,31 +1428,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DatetimeIndex(['2021-01-01', '2021-01-02', '2021-01-03', '2021-01-04',\n",
-      "               '2021-01-05', '2021-01-06', '2021-01-07', '2021-01-08',\n",
-      "               '2021-01-09', '2021-01-10',\n",
+      "DatetimeIndex(['2022-01-01', '2022-01-02', '2022-01-03', '2022-01-04',\n",
+      "               '2022-01-05', '2022-01-06', '2022-01-07', '2022-01-08',\n",
+      "               '2022-01-09', '2022-01-10',\n",
       "               ...\n",
-      "               '2021-12-27', '2021-12-28', '2021-12-29', '2021-12-30',\n",
-      "               '2021-12-31', '2022-01-01', '2022-01-02', '2022-01-03',\n",
-      "               '2022-01-04', '2022-01-05'],\n",
-      "              dtype='datetime64[ns]', length=370, freq='D')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_6660\\332055246.py:1: FutureWarning: The pandas.datetime class is deprecated and will be removed from pandas in a future version. Import from datetime module instead.\n",
-      "  start = pd.datetime(2021, 1, 1)\n",
-      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_6660\\332055246.py:2: FutureWarning: The pandas.datetime class is deprecated and will be removed from pandas in a future version. Import from datetime module instead.\n",
-      "  end = pd.datetime(2022, 1, 5)\n"
+      "               '2022-04-22', '2022-04-23', '2022-04-24', '2022-04-25',\n",
+      "               '2022-04-26', '2022-04-27', '2022-04-28', '2022-04-29',\n",
+      "               '2022-04-30', '2022-05-01'],\n",
+      "              dtype='datetime64[ns]', length=121, freq='D')\n"
      ]
     }
    ],
    "source": [
-    "start = pd.datetime(2021, 1, 1)\n",
-    "end = pd.datetime(2022, 1, 5)\n",
-    "\n",
+    "start = '1/1/2022' # format MM/DD/YY\n",
+    "end = '5/1/2022'\n",
     "print(pd.date_range(start, end))"
    ]
   },
