--- a/pandas+crash+course.ipynb
+++ b/pandas+crash+course.ipynb
@@ -1519,8 +1519,8 @@
    "source": [
     "#Bar Plot\n",
     "\n",
-    "df = pd.DataFrame(np.random.rand(5,5),columns=['a','b','c','d','e'])\n",
-    "df.plot.bar()"
+    "dataframe = pd.DataFrame(data=np.random.rand(5,5),columns=['a','b','c','d','e'])\n",
+    "dataframe.plot.bar()"
    ]
   },
   {
