--- a/numpy+crash+course.ipynb
+++ b/numpy+crash+course.ipynb
@@ -36,20 +36,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "25d1fcdb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Using nd-array\n",
     "\n",
     "nparray = np.array([1,2,3,4,5])\n",
-    "array([1, 2, 3,4,5])"
+    "nparray"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0783cf41",
    "metadata": {},
    "outputs": [
@@ -59,7 +70,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,12 +78,13 @@
    "source": [
     "#datatype of array \n",
     "\n",
-    "nparray.dtype"
+    "nparray.dtype # => dtype('int32')\n",
+    "#print(type(nparray)) => output: <class 'numpy.ndarray'>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "eb8a3ff2",
    "metadata": {},
    "outputs": [
@@ -82,7 +94,7 @@
        "5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "283bcb26",
    "metadata": {},
    "outputs": [
@@ -104,7 +116,7 @@
        "(5,)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8fa3e70e",
    "metadata": {},
    "outputs": [
@@ -125,8 +137,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "418 µs ± 104 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
-      "10 µs ± 3.52 µs per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "1.34 ms ± 215 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "26.3 µs ± 607 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
