--- a/numpy+crash+course.ipynb
+++ b/numpy+crash+course.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "6472222e",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "23"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "9d9fddf5",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "66"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "ab2e438c",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
        "array([32, 23, 31])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "f06eb10a",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "array([44])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "c61722b7",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
        "array([32, 23, 31, 44, 55, 66])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "id": "b276d34d",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
        "array([44, 55, 66])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,30 +398,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "57823ea6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2, 3],\n",
-       "       [4, 5, 6]])"
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Axes\n",
-    "np.arange(1, 7).reshape((2, 3))"
+    "np.arange(1, 7).reshape((3, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "f2665c1f",
    "metadata": {},
    "outputs": [
@@ -431,7 +432,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,38 +443,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "id": "e433ba15",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2, 3]])"
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.arange(1, 4).reshape(1,3)"
+    "np.arange(1, 4).reshape(3,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 30,
    "id": "036487f5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n",
+      "[5 3 2 5 2]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([1, 2, 3, 4, 5, 5, 3, 2, 5, 2])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,13 +492,15 @@
    "source": [
     "#Array Concatenation\n",
     "smallArray=np.array([1,2,3,4,5])\n",
+    "print(smallArray)\n",
     "largeArray=np.array([5,3,2,5,2])\n",
+    "print(largeArray)\n",
     "np.concatenate([smallArray, largeArray])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "id": "755c5f8d",
    "metadata": {},
    "outputs": [
@@ -497,7 +510,7 @@
        "array([ 0,  3,  6,  9, 12, 15, 18, 21, 24, 27])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
