--- a/numpy+crash+course.ipynb
+++ b/numpy+crash+course.ipynb
@@ -523,28 +523,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "id": "a735a8a4",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[20 21 22 23 24 25 26 27 28 29]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([20, 22, 24, 26, 28, 30, 32, 34, 36, 38])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(np.arange(0, 10))\n",
+    "print(np.arange(20,30))\n",
     "np.arange(0, 10) + np.arange(20, 30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
    "id": "8b21dfcc",
    "metadata": {},
    "outputs": [
@@ -552,7 +562,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "863 ns ± 139 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "3.84 µs ± 808 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -563,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 37,
    "id": "578105f3",
    "metadata": {},
    "outputs": [
@@ -573,7 +583,7 @@
        "15"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
