--- a/numpy+crash+course.ipynb
+++ b/numpy+crash+course.ipynb
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "a738b344",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
        "array([False,  True, False, False])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,23 +832,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 57,
    "id": "e04c6e07",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.any(x == 2)"
+    "np.any(x == 5)\n",
+    "\n",
+    "#wtf !!!! this will read from latest arrray"
    ]
   },
   {
@@ -999,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
