--- a/numpy+crash+course.ipynb
+++ b/numpy+crash+course.ipynb
@@ -985,12 +985,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "132f97ec",
+   "metadata": {},
+   "source": [
+    "## now do you think you know so much?\n",
+    "# BE READY TO GET FUCKING CRAZY"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a678080d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.around()\n",
+    "np.abs()\n",
+    "np.abs.accumulate()\n",
+    "np.abs.at()\n",
+    "np.abs.identity()\n",
+    "np.abs.outer()\n",
+    "# np.abs. has more :)\n",
+    "\n",
+    "np.absolute()\n",
+    "# np.absolute. has more :)\n",
+    "\n",
+    "np.add\n",
+    "np.add.reduce()\n",
+    "# np.add has more :)\n",
+    "\n",
+    "#np has more options than you can imagine !!!! try it "
+   ]
   }
  ],
  "metadata": {
