--- a/Data+visualization+crash+course.ipynb
+++ b/Data+visualization+crash+course.ipynb
@@ -90,6 +90,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "id": "0ea59f5f",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1 2 3 4]\n"
+          ]
+        }
+      ],
+      "source": [
+        "x = np.arange(1,5)\n",
+        "print(x)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 3,
       "id": "1a15a7c2",
       "metadata": {},
@@ -114,13 +133,16 @@
         "axes[0].plot( x, np.exp(x))\n",
         "axes[0].plot(x,x**2)\n",
         "axes[0].set_title(\"Normal scale\")\n",
+        "\n",
         "axes[1].plot (x, np.exp(x))\n",
         "axes[1].plot(x, x**2)\n",
         "axes[1].set_yscale(\"log\")\n",
         "axes[1].set_title(\"Logarithmic scale (y)\")\n",
+        "\n",
         "axes[0].set_xlabel(\"x axis\")\n",
         "axes[0].set_ylabel(\"y axis\")\n",
         "axes[0].xaxis.labelpad = 10\n",
+        "\n",
         "axes[1].set_xlabel(\"x axis\")\n",
         "axes[1].set_ylabel(\"y axis\")\n",
         "plt.show()"
