import matplotlib as mpl

--- a/Data+visualization+crash+course.ipynb
+++ b/Data+visualization+crash+course.ipynb
@@ -524,7 +524,9 @@
       "id": "f69e0d5d",
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "import matplotlib as mpl"
+      ]
     }
   ],
   "metadata": {
