--- a/Data+visualization+crash+course.ipynb
+++ b/Data+visualization+crash+course.ipynb
@@ -525,7 +525,37 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import matplotlib as mpl"
+        "import matplotlib as mpl\n",
+        "\n",
+        "mpl.color_sequences\n",
+        "mpl.colormaps\n",
+        "mpl.defaultParams\n",
+        "\n",
+        "mpl.get_backend\n",
+        "mpl.ExecutableNotFoundError\n",
+        "mpl.get_configdir\n",
+        "mpl.get_cachedir\n",
+        "mpl.get_data_path\n",
+        "mpl.interactive\n",
+        "mpl.matplotlib_fname\n",
+        "mpl.is_interactive\n",
+        "mpl.MatplotlibDeprecationWarning\n",
+        "mpl.rc\n",
+        "mpl.rc_file\n",
+        "mpl.rc_context\n",
+        "mpl.rc_file_defaults\n",
+        "mpl.rc_params\n",
+        "mpl.rcdefaults\n",
+        "mpl.rc_params_from_file\n",
+        "mpl.RcParams\n",
+        "mpl.set_loglevel\n",
+        "mpl.rcParamsOrig\n",
+        "mpl.use\n",
+        "mpl.rcParamsDefault\n",
+        "mpl._ExecInfo\n",
+        "mpl._preprocess_data # VIP\n",
+        "mpl._VersionInfo\n",
+        "mpl"
       ]
     }
   ],
